upload the files

--- a/my-first-project/index.html
+++ b/my-first-project/index.html
@@ -42,7 +42,7 @@
 		<div>
 
 			<div class="box4"></div>
-			<h2>Practically Experience one of the Creative Coding Project By Shanze</h2>
+			<h2>Practically Experience one of the Creative Coding Project By Shanze- CLICK ON THE CANVAS TO SEE THE MAGIC </h2>
 
 			<div id="myContainer"></div>
 	</main>
