--- a/11r-sketch-gallery-page/index.html
+++ b/11r-sketch-gallery-page/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <h1>Project A - Generative Art</h1>
+  <h1>Project A - Dream Machine </h1>
 
   <!-- the following div will contain the p5 canvas. -->
   <div id="canvasContainer">Project Description</div>
@@ -29,4 +29,4 @@
   <script src="sketch.js"></script>
 
 </body>
-</html>"
+</html>
