--- a/wedding-invitation-website-main/index.html
+++ b/wedding-invitation-website-main/index.html
@@ -70,7 +70,10 @@
                     Ordinary Love Story
                 </h3>
 
-                <p class="text reveal">We met on facebook. Not sure if the kids remember that one. His female housemates encouraged him to get on it - he wasn't keen, but one night we ended up chatting and the next year we met up at a resteraunt. We spent nine hours talking to eachother on call, and he bought me a flowers from LA  and he said that's how he knew I was the one.</p>
+                <p class="text reveal">When we first talked, we were 12,384 km apart
+                    Never did I know, something like this would ever start
+                    My way of telling you like you was through the letter and the rose
+                    And since then, my life has been better after-all Danny is the one you chose</p>
             </div>
 
 
