--- a/wedding-invitation-website-main/index.html
+++ b/wedding-invitation-website-main/index.html
@@ -113,7 +113,13 @@
                 <div class="registry-container reveal">
                     <h3>Promises</h3>
                     <div class="text">
-                        I will provide welfare and happiness for you and the children that we bear and you shall offer me food and help whenever it is required. Together, we will protect our children and home and stand as each other's strength and courage. I will put every other person secodary to you. You make my like complete and promise to respect you. God bless you, my best friend. I pray thee, may my presence fill our life with joy and prospers.
+                        Danny and Maria sat across from each other, their eyes locked in a deep gaze, they began to speak about their future together. Danny felt a sense of comfort as he gazed into Maria's eyes, knowing that he had found the one he wanted to spend the rest of his life with.
+
+                        In a soft tone, Danny spoke, "Maria, I promise to always support your decisions, no matter what. I'll be there for you through thick and thin, to be your rock and protect you. I'll love you unconditionally, no matter what life may throw our way."
+                        
+                        Maria smiled, feeling her heart flutter with love and appreciation. "And I promise to always communicate openly and honestly with you, Danny," she replied. "I'll be your partner in all aspects of life, standing by you, supporting your goals and aspirations. I'll love you unconditionally, through every obstacle and triumph we may face."
+                        
+                        As they held each other's hand, they both knew that their promises were more than just words. They were a testament to the love and devotion they shared for one another. Danny and Maria were ready to embark on their journey together, with their hearts full of promises and hope for a beautiful future.
                     </div>
                     <button class="huge-btn text">BLESS US</button>
                 </div>
