--- a/wedding-invitation-website-main/index.html
+++ b/wedding-invitation-website-main/index.html
@@ -16,7 +16,7 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <label class="logo">A&G</label>
+        <label class="logo">DM</label>
         <ul class="text">
             <li><a href="#story" onclick="myFunction()">OUR STORY</a></li>
             <li><a href="#stay" onclick="myFunction()">TRAVEL & STAY</a></li>
