--- a/Project B/index.html
+++ b/Project B/index.html
@@ -20,21 +20,23 @@
 
 <body>
 
-  <h1>Project Title- Welcome to the Project B </h1>
+  <h1> Welcome to the Project B </h1>
 
   <!-- the following div will contain the p5 canvas. -->
-  <div id="canvasContainer"></div>
+  <div id="canvasContainer">
+  <p> The concept of audio art is grounded in the notion that sound and visuals are interconnected, and that the visual experience can be enriched by the addition of audio. By enabling users to create and design their own soundscapes, my project provides a platform for artistic expression that is not only visually stunning but also deeply personal.
+
+    The key to the success of my project lies in the user interaction with the canvas. Users will have the ability to press keys to create different visual effects and interact with sliders to adjust various parameters such as pitch, volume, and color/size.  To make it even easier for users to share their creations, I plan to include a button that allows them to share their audio art on social media platforms like Instagram or Twitter, or to save it to their device.</p>
+
+  </div>
   <script src="sketch.js"></script>
 
   <div>
-		<label for="waveform-type">Waveform Type:</label>
+		<label for="waveform-type">Waveform Frequency:</label>
 		<input type="range" id="waveform-type" min="0" max="2" step="1" value="0">
 	</div>
 
   <button id="playButton" onclick="togglePlay()">Play</button>
-
-
-  <p>Project B is designed in a very interesting manner it will not only allow the user to interact and create visuals rather it will allow the user to create their own music art </p>
 
   <!-- the script tag below should always be at the bottom, right before the closing body tag -->
   <script src="sketch.js"></script>
