--- a/Project B/about.html
+++ b/Project B/about.html
@@ -19,7 +19,7 @@
     <p>
     </p>
 
-    <div id="canvasContainer"></div>
+    <div id="canvasContainer"> Customize your audio</div>
 
   <div id="controls">
     <label for="frequency-input">Frequency:</label>
